# daalu-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  README.md  README_demo.md  SECURITY.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  teardown.sh
.github/workflows/: ci.yml
components/nv-config-manager/: NVIDIA-NOTICE  README.md  VENDORED.md  nv-config-manager-1.2.2-rc.23.images.txt
components/nv-config-manager/chart/nv-config-manager-1.2.2-rc.23/: .helmignore  Chart.yaml  sample-eso-config.yaml  sample-manifest.json  sample-nv-config-manager.ini  values-ci.yaml  values-local-medium.yaml  values-local-small.yaml  values-local-teleport.yaml  values-local.yaml  values-observability.yaml  values-rbac-open.yaml  values-sample-keycloak.yaml  values-spiffe-spire.yaml  values-spiffe-teleport.yaml  values.yaml
components/nv-config-manager/scripts/: README.md  build-push-images.sh  dns-wildcard.sh  mirror-images.sh  setup-keycloak.sh  tier-a-check.sh
demo/: README.md  break.sh  down.sh  kind-config.yaml  lib-cluster.sh  status.sh  up-manual.sh  up.sh
demo/manifests/: checkout-api-alerts.yaml  checkout-api.yaml  dummy-app-alerts.yaml  dummy-app.yaml  metrics-app.yaml
docs/: 01-architecture.md  02-agent-and-guardrails.md  03-llm-and-sovereignty.md  04-deployment.md  05-tools.md  06-extending.md  07-network-server-management.md  PUBLISH-CHECKLIST.md  README.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/: page.tsx
frontend/app/ai-factory/: page.tsx
frontend/app/alerts/: page.tsx
frontend/app/automations/: page.tsx
frontend/app/clusters/: page.tsx
frontend/app/devices/: page.tsx
frontend/app/help/: page.tsx
frontend/app/integrations/: page.tsx
frontend/app/managed-infra/: page.tsx
frontend/app/network/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/operations/: page.tsx
frontend/app/proposals/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/workflows/: page.tsx
frontend/components/: command-bar.tsx  greeting-hero.tsx  hero-briefing.tsx
frontend/components/alerts/: alert-chat-rail.tsx  alert-chat.tsx  alert-occurrences.tsx  alert-tile.tsx  alert-title.tsx  execution-log.tsx  investigation-tiles.tsx  promote-incident-dialog.tsx
frontend/components/brand/: daalu-mark.tsx
frontend/components/cards/: active-workflows-card.tsx  ai-insight-card.tsx  ai-recommendation-card.tsx  event-feed-card.tsx  metrics-card.tsx  summary-tile.tsx  workflow-status-card.tsx
frontend/components/copilot/: markdown.tsx
frontend/components/integrations/: connect-modal.tsx  steps.tsx
frontend/components/layout/: app-shell.tsx  header.tsx  right-panel.tsx  sidebar.tsx
frontend/components/onboarding/: cluster-workflow.tsx
frontend/components/operations/: bulk-import-view.tsx  devices-view.tsx  drift-view.tsx  overview-view.tsx  proposals-view.tsx  routine-runs-view.tsx
frontend/components/proposals/: proposal-tile.tsx
frontend/components/reports/: dashboards-tab.tsx  query-tab.tsx
frontend/components/workflows/: status-badge.tsx
frontend/lib/: api.ts  auth.tsx  sse.ts  theme.tsx  utils.ts
migrations/: env.py
migrations/versions/: 0001_multi_tenancy.py  0002_alert_chat_actions.py  0003_cluster_tunnels.py  0004_alert_occurrences.py  0005_change_proposals.py  0006_billing.py  0007_user_settings_pats_feedback.py  0008_daalu_hosted_and_workspaces.py  0009_daalu_private.py  0010_edge_data_plane.py  0011_invites.py  0012_drop_sales.py  0013_saved_reports.py  0014_dashboards.py  0015_report_schedules.py  0016_integration_cluster_tunnel.py  0017_integration_last_probed_at.py  0018_nautobot_tenants.py  0019_config_manager_tenants.py  0020_gpu_tenants.py  0021_tenant_sovereign_inference.py  0022_gpu_sharing.py  0023_gpu_diagnostic_runs.py  0024_aiperf_runs.py  0025_workspace_model.py  0026_workspace_git_token.py  0027_self_signup_email_verification.py  0028_cli_device_authorizations.py  0029_local_benchmark_runs.py  0030_workflow_run_alert_steps.py
scripts/: build-nvcm-images.sh  install-gpu-k3s.sh  install-inference.sh  onboard-cluster.sh  serve-model.sh
src/daalu_automation/: __init__.py  cli.py  config.py  database.py  observability.py
src/daalu_automation/api/: deps.py  main.py
src/daalu_automation/config_manager_controller/: __init__.py  app.py  deployer_config.py  deployer_runner.py  helm_runner.py  prechecks.py  values.py
src/daalu_automation/core/: __init__.py  agents.py  alert_fingerprint.py  auth.py  billing.py  bootstrap.py  briefings.py  change_proposals.py  cloud_aws.py  cloud_azure.py  cloud_gcp.py  cluster_proxy.py  crypto.py  egress.py  events.py  integrations.py  keycloak.py  kube_console.py  kube_tools.py  llm.py  local_inference.py  metrics.py  model_catalog.py  notify.py  object_storage.py  observability_console.py  prometheus.py  service_tokens.py  sot_tools.py  tenant_db.py  tenant_settings.py  workflows.py
src/daalu_automation/gpu_controller/: __init__.py  aiperf.py  diagnostics.py
src/daalu_automation/models/: __init__.py  _mixins.py  agent_run.py  aiperf_run.py  alert.py  alert_chat.py  billing.py  briefing.py  change_proposal.py  cli_device.py  cluster_tunnel.py  config_manager_tenant.py  daalu_hosted_quota.py  dashboard.py  email_verification.py  event.py  feedback.py  gpu_diagnostic_run.py  gpu_pool.py  gpu_revenue_share.py  gpu_tenant.py  infra.py  integration.py  invite.py  local_benchmark_run.py  nautobot_tenant.py  personal_access_token.py  recommendation.py  report_schedule.py  saved_report.py  tenant.py  user.py  workflow_run.py  workspace.py
src/daalu_automation/modules/: __init__.py
src/daalu_automation/nautobot_controller/: __init__.py  app.py  k8s.py  manifests.py
src/daalu_automation/workers/: agent_runner.py  celery_app.py  executor.py  integration_health.py  local_benchmark.py  reconciler.py  report_dispatch.py
tests/: conftest.py  test_config.py  test_crypto.py  test_egress.py  test_tool_approval.py
(+157 files in other folders)
