[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daalu-agent"
version = "0.1.0"
description = "Daalu — a self-hosted AI agent for infrastructure / ops teams. It investigates, proposes changes, and executes only after you approve. Runs on your own inference."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    # API
    # Cap below 0.137: FastAPI 0.137.0 changed include_router(prefix=...) to
    # wrap sub-routers in `_IncludedRouter` objects that have no `.path`, which
    # crashes prometheus-fastapi-instrumentator's get_route_name() on nearly
    # every request (full API 500 storm). 0.136.3 is the last known-good.
    # NOTE: deps here are floor-pinned with no lockfile, so a fresh image build
    # silently floats minors — this cap is a stopgap; a real lock is the fix.
    "fastapi>=0.111.0,<0.137",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    # Validation / settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    # LLM clients — both Anthropic (primary) and an OpenAI-compatible
    # fallback so operators can point at DeepSeek/Together/etc. via
    # LLM_BASE_URL without code changes (mirrors muse's setup).
    "anthropic>=0.34.0",
    "openai>=1.30.0",
    # Object storage (MinIO / S3 / Rook-Ceph RGW)
    "boto3>=1.34.0",
    "aiofiles>=23.2.1",
    # HTTP + scraping (integrations)
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    # Synchronous HTTP client used by the vendored nv_config_manager_installer
    # package (registry_client + k8s helpers). The Deployer code path the
    # controller drives needs it on PATH; pull it in explicitly rather than
    # relying on a transitive dep.
    "requests>=2.32.0",
    # Kubernetes client — powers the per-alert remediation tools.
    "kubernetes>=29.0.0",
    # Async Kubernetes client used by workspace-controller's reconcile
    # loop. The sync `kubernetes` lib above blocks the event loop and
    # is unsuitable for the controller's polling pattern.
    "kubernetes_asyncio>=29.0.0",
    # NATS JetStream client — the event bridge subscribes to a per-tenant
    # NVIDIA Config Manager stack's NATS subjects (workflow results, device
    # / Nautobot change) over the WireGuard tunnel and republishes them onto
    # the hub's Redis event bus. See docs/design/nv-config-manager-integration.md §9.3.
    "nats-py>=2.6.0",
    # Cloud SDKs — the alert chat's read tools span AWS / GCP / Azure
    # so the agent can pull instance state, logs and metrics from any
    # provider a tenant registers as an Integration. Read-only access
    # is enough for v1; write tools live in kube_tools.py.
    "google-cloud-compute>=1.19.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-monitoring>=2.22.0",
    "google-cloud-functions>=1.16.0",
    "google-api-python-client>=2.140.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-compute>=33.0.0",
    "azure-mgmt-sql>=4.0.0b15",
    "azure-mgmt-web>=7.3.0",
    "azure-monitor-query>=1.4.0",
    # Auth + crypto
    "passlib[bcrypt]>=1.7.4,<2.0",
    # passlib's bcrypt-version probe reads `bcrypt.__about__` which was
    # removed in bcrypt 4.1. The "(trapped) error reading bcrypt version"
    # warning is harmless (hashing still works via a fallback) but
    # noisy in operator-facing CLI output, so cap at 4.0.x until passlib
    # ships a fix.
    "bcrypt>=4.0,<4.1",
    "pyjwt>=2.8.0",
    # Fernet for at-rest encryption of WireGuard private keys, and
    # X25519 for generating the operator-side WG keypair.
    "cryptography>=42.0.0",
    # Observability
    "sentry-sdk[fastapi]>=1.40.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.1.0",
    # Utilities
    "tenacity>=8.3.0",
    "python-slugify>=8.0.4",
    "arrow>=1.3.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    # SSH transport for the device-adapter family (Linux servers in v1).
    "asyncssh>=2.14.0",
    # Network-device adapters: Scrapli CLI (Arista EOS) and
    # scrapli-netconf (Junos / IOS-XR). Both pull asyncssh transitively
    # which we already require above for Linux SSH.
    "scrapli[asyncssh]>=2024.7.30",
    "scrapli-netconf>=2024.7.30",
    # Bulk-inventory upload — YAML support is already transitively
    # available via pydantic/anthropic; openpyxl is the read path for
    # the Excel option on /operations → Bulk import.
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
    # Higher-level httpx mock; tests can pick respx or MockTransport.
    "respx>=0.21.0",
]

[project.scripts]
daalu = "daalu_automation.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
# Tolerated (project convention or pre-existing pattern, no urgent
# value in mass-renames):
# - B008 — FastAPI Depends()/Query() defaults are intentionally
#   evaluated per-request.
# - N818 — exceptions named like LLMUnavailable / TokenError don't
#   end in "Error"; long-standing naming.
# - E402 — main.py and a few entrypoints conditionally import after
#   env-var inspection; structurally module-level.
# - B904 — many `raise HTTPException(...)` sites swallow internal
#   exception chaining on purpose so the API response doesn't leak.
# - F841 — a handful of intentionally-bound variables for diagnostics.
# - N806 — Pydantic Session/Adapter aliases in a couple of routers.
# Newly-introduced violations of these should still be reviewed, but
# we don't want CI red on them.
ignore = ["E501", "B008", "N818", "E402", "B904", "F841", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole suite so session-scoped async
# fixtures (the test DB engine, the ASGI client) survive across tests.
# pytest-asyncio 1.x requires this to be explicit.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
